# judical_monitoring

./: .env.docker  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: celery.py  logging_config.py  main.py  settings.py
app/bot/: __init__.py  __main__.py  bot.py  constants.py  handlers.py  keyboards.py  loader.py  main.py  setup_handlers.py  setup_hundlers.py  type.py  utils.py
app/bot/handlers/: __init__.py  about.py  cancel.py  cases.py  help.py  list_cases.py  start.py  unsubscribe.py  unsubscribe_case.py
app/celery_app/: main.py
app/database/: base.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 092c0c869b96_init_database.py  33f1f9efe167_add_relationship_for_case_category.py  33f66027a539_init_database.py  4e5da1841e17_add_relationship_for_judge.py  5746cd5592a9_add_judge_last_name.py  762f98969a20_new_bd1.py  8f6eb1539b3b_add_relationship_for_case_category.py  b14018d52fd4_add_relationship_for_case_category.py  (+3 more)
app/database/models/: __init__.py  case.py  case_category.py  case_event.py  category.py  court.py  judge.py  notification.py  subscription.py  user.py
app/database/repositories/: case.py  case_category.py  case_event.py  category.py  court.py  exceptions.py  judge.py  notification.py  subscription.py  user.py
app/parser/: exceptions.py  parser.py  types.py
app/services/: cases.py  events.py  exceptions.py  notifications.py  services.py  subscriptions.py  users.py
app/tasks/: __init__.py  cases.py  notifications.py  scheduler.py
src/: main.py
